Issue #1229912 by ao2: Secondary tabs are rendered behind other elements

--- a/style.css
+++ b/style.css
@@ -259,6 +259,7 @@ div.pager {
   border-radius:3px;
   -moz-border-radius:3px;
   -webkit-border-radius:3px;
+  z-index: 1;
   }
 
 .secondary-tabs:hover {
